Fixed the add button image height on smaller screens (via max-height)

--- a/src/pages/Pictures/components/PictureItem.module.css
+++ b/src/pages/Pictures/components/PictureItem.module.css
@@ -6,5 +6,5 @@
     place-items: center;
 }
 .addButtonImage {
-    width: 50%;
+    max-height: 100px;
 }
